fixed some more spacing things

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+#pageContent.textsection {
+  margin-top: 0px;
+}
+
 .textsection p.first {
   margin-top: 30px;
 }
